test/corpus/advanced/operators_and_functions.txt
==================
Channel operators
==================

ch1 = Channel.from(1,2,3)
ch2 = Channel.from(4,5,6)

result = ch1
    .mix(ch2)
    .map { it * 2 }
    .filter { it > 5 }
    .collect()

---

(source_file
  (assignment
    (identifier)
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (integer_literal)
        (integer_literal)
        (integer_literal))))
  (assignment
    (identifier)
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (integer_literal)
        (integer_literal)
        (integer_literal))))
  (assignment
    (identifier)
    (call_expression
      (member_expression
        (call_expression
          (member_expression
            (call_expression
              (member_expression
                (call_expression
                  (member_expression
                    (identifier)
                    (identifier))
                  (argument_list
                    (identifier)))
                (identifier))
              (closure
                (expression_statement
                  (binary_expression
                    (identifier)
                    (integer_literal)))))
            (identifier))
          (closure
            (expression_statement
              (binary_expression
                (identifier)
                (integer_literal)))))
        (identifier))
      (argument_list))))

==================
Math operations
==================

x = 1 + 2 * 3
y = Math.pow(2, 3)
z = Math.round(3.14)

---

(source_file
  (assignment
    (identifier)
    (binary_expression
      (integer_literal)
      (binary_expression
        (integer_literal)
        (integer_literal))))
  (assignment
    (identifier)
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (integer_literal)
        (integer_literal))))
  (assignment
    (identifier)
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (float_literal)))))

==================
Regular expressions
==================

pattern = ~/foo.*/
if( "foo bar" =~ pattern ) {
    println "match"
}

---

(source_file
  (assignment
    (identifier)
    (unary_expression
      (slashy_string)))
  (if_statement
    (binary_expression
      (string
        (string_content))
      (identifier))
    (block
      (expression_statement
        (command_expression
          (identifier)
          (argument_list
            (string
              (string_content))))))))
