test/corpus/advanced/script_injection.txt
==================
Simple script block
==================

process SIMPLE {
    script:
    """
    echo hello
    """
}

---

(source_file
  (process_definition
    (identifier)
    (script_section
      (expression_statement
        (string
          (string_content))))))

==================
Shell script block
==================

process SHELL_TEST {
    shell:
    '''
    echo world
    '''
}

---

(source_file
  (process_definition
    (identifier)
    (script_section
      (expression_statement
        (string
          (string_content))))))

==================
Exec script block
==================

process EXEC_TEST {
    exec:
    """
    echo exec
    """
}

---

(source_file
  (process_definition
    (identifier)
    (script_section
      (expression_statement
        (string
          (string_content))))))

==================
Stub script block
==================

process STUB_TEST {
    stub:
    """
    echo stub
    """
}

---

(source_file
  (process_definition
    (identifier)
    (stub_section
      (expression_statement
        (string
          (string_content))))))
