test/corpus/basic/basic_declarations.txt
==================
Shebang declaration
==================

#!/usr/bin/env nextflow

---

(source_file
  (shebang))

==================
Feature flag declaration
==================

nextflow.preview.topic = true

---

(source_file
  (feature_flag
    (identifier)
    (identifier)
    (boolean_literal)))

==================
Include declaration
==================

include { foo; bar as baz } from './some/module'

---

(source_file
  (include_declaration
    (include_item
      (identifier))
    (include_item
      (identifier)
      (identifier))
    (string
      (string_content))))

==================
Parameter declaration
==================

params.message = 'Hello world!'

---

(source_file
  (param_assignment
    (identifier)
    (string
      (string_content))))

==================
Module imports
==================

include { FASTQC } from './modules/fastqc'
include { BWA_INDEX; BWA_ALIGN } from './modules/bwa'
include { MULTIQC as MULTIQC_RAW } from './modules/multiqc'

---

(source_file
  (include_declaration
    (include_item
      (identifier))
    (string
      (string_content)))
  (include_declaration
    (include_item
      (identifier))
    (include_item
      (identifier))
    (string
      (string_content)))
  (include_declaration
    (include_item
      (identifier)
      (identifier))
    (string
      (string_content))))
