test/corpus/basic/control_structures.txt
==================
If else statements
==================

if (x > 5) {
    println "greater"
} else if (x < 0) {
    println "negative"
} else {
    println "other"
}

---

(source_file
  (if_statement
    (binary_expression
      (identifier)
      (integer_literal))
    (block
      (expression_statement
        (command_expression
          (identifier)
          (argument_list
            (string
              (string_content))))))
    (if_statement
      (binary_expression
        (identifier)
        (integer_literal))
      (block
        (expression_statement
          (command_expression
            (identifier)
            (argument_list
              (string
                (string_content))))))
      (block
        (expression_statement
          (command_expression
            (identifier)
            (argument_list
              (string
                (string_content)))))))))

=================
Function call assignment
=================

foo = bar("baz")

---

(source_file
  (assignment
    (identifier)
    (call_expression
      (identifier)
      (argument_list
        (string
          (string_content))))))

=================
Operator precedence
=================

def a = x + y * z
def b = x * y + z
def c = (1 + x) * y + 5 * z + 3

---

(source_file
  (variable_declaration
    (identifier)
    (binary_expression
      (identifier)
      (binary_expression
        (identifier)
        (identifier))))
  (variable_declaration
    (identifier)
    (binary_expression
      (binary_expression
        (identifier)
        (identifier))
      (identifier)))
  (variable_declaration
    (identifier)
    (binary_expression
      (binary_expression
        (binary_expression
          (parenthesized_expression
            (binary_expression
              (integer_literal)
              (identifier)))
          (identifier))
        (binary_expression
          (integer_literal)
          (identifier)))
      (integer_literal))))
