test/corpus/basic/data_structures.txt
==================
Complex maps and lists
==================

params {
    tools = [
        fastqc: [
            cpus: 2,
            memory: '4 GB'
        ],
        bwa: [
            cpus: 8,
            memory: '16 GB'
        ]
    ]
}

list = [[1,2], [3,4], [5,6]]

---

(source_file
  (params_definition
    (param_declaration
      (identifier)
      (map
        (map_entry
          (identifier)
          (map
            (map_entry
              (identifier)
              (integer_literal))
            (map_entry
              (identifier)
              (string
                (string_content)))))
        (map_entry
          (identifier)
          (map
            (map_entry
              (identifier)
              (integer_literal))
            (map_entry
              (identifier)
              (string
                (string_content))))))))
  (assignment
    (identifier)
    (list
      (list
        (integer_literal)
        (integer_literal))
      (list
        (integer_literal)
        (integer_literal))
      (list
        (integer_literal)
        (integer_literal)))))

==================
Ranges
==================

range1 = 1..10
range2 = 1..<10
range3 = 'a'..'z'
range4 = 10..1

---

(source_file
  (assignment
    (identifier)
    (binary_expression
      (integer_literal)
      (integer_literal)))
  (assignment
    (identifier)
    (binary_expression
      (integer_literal)
      (integer_literal)))
  (assignment
    (identifier)
    (binary_expression
      (string
        (string_content))
      (string
        (string_content))))
  (assignment
    (identifier)
    (binary_expression
      (integer_literal)
      (integer_literal))))

==================
Sets
==================

set1 = [1,2,3,4] as Set
set2 = ['a','b','c'] as Set

combined = set1 + set2
intersection = set1.intersect(set2)

---

(source_file
  (assignment
    (identifier)
    (cast_expression
      (list
        (integer_literal)
        (integer_literal)
        (integer_literal)
        (integer_literal))
      (type
        (identifier))))
  (assignment
    (identifier)
    (cast_expression
      (list
        (string
          (string_content))
        (string
          (string_content))
        (string
          (string_content)))
      (type
        (identifier))))
  (assignment
    (identifier)
    (binary_expression
      (identifier)
      (identifier)))
  (assignment
    (identifier)
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (identifier)))))
