test/corpus/basic/process_definition.txt
==================
Process with input block
==================

process FASTQC {
    input:
    path reads;
}

---

(source_file
  (process_definition
    (identifier)
    (input_section
      (expression_statement
        (command_expression
          (identifier)
          (argument_list
            (identifier)))))))

==================
Process with output block
==================

process FASTQC {
    output:
    path "fastqc_*";
}

---

(source_file
  (process_definition
    (identifier)
    (output_section
      (expression_statement
        (command_expression
          (identifier)
          (argument_list
            (string
              (string_content))))))))

==================
Process with script block
==================

process FASTQC {
    script:
    """fastqc $reads"""
}

---

(source_file
  (process_definition
    (identifier)
    (script_section
      (expression_statement
        (string
          (string_content)
          (interpolation
            (identifier)))))))

==================
Complete process definition
==================

process FASTQC {
    input:
    path reads;

    output:
    path "fastqc_*";

    script:
    """fastqc $reads"""
}

---

(source_file
  (process_definition
    (identifier)
    (input_section
      (expression_statement
        (command_expression
          (identifier)
          (argument_list
            (identifier)))))
    (output_section
      (expression_statement
        (command_expression
          (identifier)
          (argument_list
            (string
              (string_content))))))
    (script_section
      (expression_statement
        (string
          (string_content)
          (interpolation
            (identifier)))))))
